# symphony

./: .gitignore  Cargo.toml  README.md  SPEC.md  WORKFLOW.md  opencode.json
.codex/: worktree_init.sh
.github/: pull_request_template.md
.github/workflows/: rust-vnext.yml
apps/dashboard/: eslint.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
config/: symphony.projects.toml  symphony.projects.yml
crates/symphony/: Cargo.toml
crates/symphony-vnext/: Cargo.toml
crates/symphony-vnext/migrations/: 001_runtime_state.sql
crates/symphony-vnext/src/: api.rs  cli.rs  config.rs  daemon.rs  dashboard.rs  lib.rs  linear.rs  main.rs  opencode.rs  state.rs  storage.rs  telemetry.rs
crates/symphony-vnext/src/daemon/: cleanup.rs  git_closure.rs  handoff.rs  http.rs  policy.rs  records.rs
crates/symphony-vnext/src/dashboard/: html.rs
crates/symphony-vnext/src/linear/: graphql_model.rs  queries.rs  types.rs
crates/symphony-vnext/src/opencode/: acp.rs  archive.rs  types.rs
crates/symphony-vnext/src/storage/: rows.rs
crates/symphony-vnext/tests/: bootstrap.rs
crates/symphony-vnext/tests/bootstrap/: config_linear_storage_api.rs  opencode_runtime.rs  orchestration_basic.rs  orchestration_handoff.rs
crates/symphony/migrations/: 001_runtime_state.sql
crates/symphony/src/: api.rs  cli.rs  config.rs  daemon.rs  dashboard.rs  lib.rs  linear.rs  main.rs  opencode.rs  runner.rs  state.rs  storage.rs  telemetry.rs
crates/symphony/src/api/: dashboard_contract.rs  self_defect_routing.rs  token_metrics.rs
crates/symphony/src/daemon/: acceptance_self_defect.rs  cleanup.rs  git_closure.rs  handoff.rs  http.rs  liveness.rs  policy.rs  records.rs  self_defects.rs  session.rs  task_selection.rs
crates/symphony/src/daemon/self_defects/: recommendation.rs
crates/symphony/src/dashboard/: html.rs  quota.rs
crates/symphony/src/linear/: graphql_model.rs  queries.rs  types.rs
crates/symphony/src/opencode/: acp.rs  adapter.rs  archive.rs  lifecycle.rs  omp.rs  omp_metrics.rs  prompt.rs  session_metrics.rs  types.rs  worktree.rs
crates/symphony/src/runner/: acp.rs  adapter.rs  archive.rs  lifecycle.rs  omp.rs  omp_metrics.rs  prompt.rs  session_metrics.rs  types.rs  worktree.rs
crates/symphony/src/storage/: rows.rs  self_defects.rs
crates/symphony/tests/: bootstrap.rs
crates/symphony/tests/bootstrap/: config_linear_storage_api.rs  dashboard_reason_codes.rs  opencode_runtime.rs  orchestration_basic.rs  orchestration_handoff.rs
deploy/systemd/: openai-symphony-symphony.service  openai-symphony-vnext-symphony.service  symphony-dashboard.service  symphony-vnext.service  symphony.service
docs/: oh-my-pi-acp-orchestration-contract.md  rust-vnext-operator-runbook.md  symphony-operator-runbook.md
docs/ui-design/: symphony-dashboard-observability-console.md
elixir/: AGENTS.md  README.md  WORKFLOW.md  mix.exs
elixir/config/: config.exs
elixir/docs/: multiproject_cutover.md  multiproject_runtime.md  opencode_active_service_migration.md  (+1 more)
(+129 files in other folders)
