[package]
name = "symphony-vnext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "symphony_vnext"
path = "src/lib.rs"

[[bin]]
name = "symphony-vnext"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
libsql = { version = "0.10.0-pre.4", default-features = false, features = ["core"] }
lineark-sdk = "3.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3.14"
